added Swagger documentation